--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
-.and a.headlink.nav-link,
-.and a.headlink.nav-link:link,
-.and a.headlink.nav-link:visited,
-.and a.headlink.nav-link:active {
+.navbar-custom a.headlink.nav-link,
+.navbar-custom a.headlink.nav-link:link,
+.navbar-custom a.headlink.nav-link:visited,
+.navbar-custom a.headlink.nav-link:active {
   color: #e84545;
   margin: 2px;
   font-weight: 400;
 }
-.and a.headlink.nav-link:hover {
+.navbar-custom a.headlink.nav-link:hover {
   color: #903749;
   /* transition: 1s; */
   border-bottom: 3px solid #903749;
@@ -179,4 +179,35 @@ button.btn:hover span {
 
 .faq {
   background-color: #e84545;
+}
+div.card-header {
+  color: #e84545;
+  border: none;
+  background-color: #2b2e4a;
+}
+
+div.card.head {
+  border: none;
+  border-radius: 0;
+  border-bottom: 1px solid;
+  color: #e84545;
+  background-color: #2b2e4a;
+}
+div.card-body {
+  text-align: justify;
+}
+
+.navbar-custom .navbar-nav .nav-link {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.navbar-toggler {
+  background: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(232,69,69, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E")
+    no-repeat center center;
+  border-color: #e84545;
+  border: 1px solid;
+}
+.navbar-toggler-icon {
+  display: none;
+  opacity: 0;
 }
