--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@
   /* bottom: 0;
   left: 0;
   right: 0; */
-  margin: 1% 0 0 0;
+  /* margin: 0% 0 0 0; */
   /* padding: 1% 0 0 0; */
   background-color: #2b2e4a;
 }
