--- a/src/App.css
+++ b/src/App.css
@@ -204,3 +204,26 @@ div.card-body {
 .navbar-toggler-icon {
   opacity: 0;
 }
+
+.loading {
+  background-color: #2b2e4a;
+  position: fixed;
+  padding: 0;
+  margin: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+}
+
+.loading div.spinner-border {
+  color: #e84545;
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  top: 50%;
+  left: 50%;
+  margin-left: -50px;
+  margin-top: -50px;
+}
